# carafe

./: .clang-format  .clangd  .gitignore  .qmllint.ini  CHANGELOG.md  CMakeLists.txt  Justfile  LICENSE  README.md
.github/scripts/: extract-release-notes.py  release-prep.py
.github/workflows/: release-prep.yml  release-tag.yml
packaging/arch/: .SRCINFO  .gitignore  LICENSE  PKGBUILD  update-sources.sh
res/: io.marlonn.carafe.desktop  io.marlonn.carafe.metainfo.xml
src/: CMakeLists.txt  game.cpp  game.h  gamemodel.cpp  gamemodel.h  icoextract.cpp  icoextract.h  launcher.cpp  launcher.h  main.cpp  proton.cpp  proton.h  settings.cpp  settings.h  steamgrid.cpp  steamgrid.h  storage.cpp  storage.h
src/qml/: AddGameDialog.qml  ContextMenu.qml  EditGameDialog.qml  GameCard.qml  GameGrid.qml  GameList.qml  GameListItem.qml  Main.qml  SettingsDialog.qml
